Fixed CSS so that multiple selectors would not be truncated at 100px, but resize themselves dynamically. This will allow displaying all permissions with no scrolling and with no extra rules for all well-behaving browsers; for IE, a special override rule is defined that sets permissions' selector height explicitly.
svn path=/src/trunk/Pootle/; revision=17141

--- a/html/admin.css
+++ b/html/admin.css
@@ -111,13 +111,6 @@ html[dir="rtl"] td.pootle_path
     text-align: right;
 }
 
-/* ADMIN PERMISSIONS */
-
-td.positive_permissions select
-{
-    height: 11.5em;
-}
-
 /* ADMIN BUTTONS */
 
 .admin-buttons-block input
